--- a/index.html
+++ b/index.html
@@ -4,9 +4,56 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio</title>
+  <title>Blog</title>
+
+  <style>
+   div { background-color: rgb(169, 183, 255);
+          border: 2px solid rgb(255, 3, 3) ;
+          border-radius:10px;
+          height: 350px;
+          width: 50%;
+          margin: 20px auto;
+          padding: 20px;
+        }
+
+    .ppp {color: rgb(255, 0, 0);
+          
+        }
+     
+    .blog-title { text-align: center;
+                  font-family: cursive;
+                  font-size: 2em;
+
+    }
+  
+
+
+  </style>
+
+
 </head>
 <body>
+
+  <h1 style="text-align: center;">My first BLog</h1>
+
+
+  <div >
+      <h2 class="blog-title">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h2>
+      <small> Author: <span class="ppp"> Shafiul </span>; Date: <span class="ppp">23/06/2023</span>; Category: <span class="ppp">Test</span>; </small>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum consequatur perferendis aut minus veritatis ipsam dolores suscipit sit rem dolore, sunt natus tempora praesentium atque nostrum voluptatem enim placeat. Et, adipisci facilis minus ea enim unde a perspiciatis eveniet quia eaque, molestias possimus corrupti at officiis delectus iure ipsam suscipit soluta, id aliquid maiores quam tenetur? Nemo, neque? Nostrum quaerat odit, natus quos, molestiae maxime ipsam tenetur illum aperiam tempore qui incidunt tempora. Et exercitationem quisquam rem officiis quo. Ullam fuga, at architecto modi vitae eveniet laboriosam ratione voluptatibus natus nam assumenda beatae unde perferendis sit quam nihil quidem repellat.</p>
+  </div>
   
+  <div >
+      <h2 class="blog-title">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h2>
+      <small> Author: <span class="ppp"> Shafiul </span>; Date: <span class="ppp">23/06/2023</span>; Category: <span class="ppp">Test</span>; </small>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum consequatur perferendis aut minus veritatis ipsam dolores suscipit sit rem dolore, sunt natus tempora praesentium atque nostrum voluptatem enim placeat. Et, adipisci facilis minus ea enim unde a perspiciatis eveniet quia eaque, molestias possimus corrupti at officiis delectus iure ipsam suscipit soluta, id aliquid maiores quam tenetur? Nemo, neque? Nostrum quaerat odit, natus quos, molestiae maxime ipsam tenetur illum aperiam tempore qui incidunt tempora. Et exercitationem quisquam rem officiis quo. Ullam fuga, at architecto modi vitae eveniet laboriosam ratione voluptatibus natus nam assumenda beatae unde perferendis sit quam nihil quidem repellat.</p>
+  </div>
+
+  <div >
+      <h2 class="blog-title">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h2>
+      <small> Author: Shafiul; Date: 23/06/2023; Category: Test; </small>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum consequatur perferendis aut minus veritatis ipsam dolores suscipit sit rem dolore, sunt natus tempora praesentium atque nostrum voluptatem enim placeat. Et, adipisci facilis minus ea enim unde a perspiciatis eveniet quia eaque, molestias possimus corrupti at officiis delectus iure ipsam suscipit soluta, id aliquid maiores quam tenetur? Nemo, neque? Nostrum quaerat odit, natus quos, molestiae maxime ipsam tenetur illum aperiam tempore qui incidunt tempora. Et exercitationem quisquam rem officiis quo. Ullam fuga, at architecto modi vitae eveniet laboriosam ratione voluptatibus natus nam assumenda beatae unde perferendis sit quam nihil quidem repellat.</p>
+  </div>
+
 </body>
 </html>
